# decide-span-aligner

./: .gitignore  LICENSE  README.md  pyproject.toml
span_aligner/: __init__.py  aligner.py  sentence_aligner.py  span_aligner.py  span_projector.py
tests/: test_span_aligner.py
