[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "span-aligner"
version = "0.2.4"
description = "A utility for aligning and mapping text spans between different text representations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "networkx>=3.3,<4",
    "rapidfuzz>=3.13,<4",
    "regex>=2024.9",
    "transformers>=4.41,<6",
    "torch>=2.5,<3",
    "scikit-learn>=1.7,<2",
    "requests>=2.32,<3",
]


[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["span_aligner*"]
